# Todos-fastapi

./: .todos.db  alembic.ini  auth.py  database.py  exceptions.py  main.py  models.py  password_management.py  pyproject.toml  requirements.txt  responses.py
alembic/: env.py
alembic/versions/: 6e832f9e17af_create_address_table.py  87c7e83d00b0_add_apartment_number_column.py  a40dda76cbfe_create_address_id_to_users.py  f0df28eb25fc_create_phone_number_for_user_col.py
company/: company_apis.py  dependencies.py
routers/: address.py  auth.py  todos.py  users.py
