[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Yamil <yamil.muza@globant.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.1"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
isort = "^5.12.0"
black = "^23.1.0"
psycopg2-binary = "^2.9.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
pylint = "^2.16.2"
alembic = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
